Changed font of grid items and tried to correct collapsing Tiles with whitespace.

--- a/src/index.css
+++ b/src/index.css
@@ -74,12 +74,12 @@
 }
 
 .tile {
-    width: 33.33%;
-    height: 33.33%;
+    min-width: 33.33%;
+    min-height: 33.33%;
     padding: 0.1em;
     border: 0.1em solid black;
     font-size: 2.5em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #fff;
 }
 
